[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/limousine/Limousine.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/ServiceList.gd" type="Script" id=2]
[ext_resource path="res://ui/ServiceSelector.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="GDScript" id=3]
script/source = "extends Label

var starting_left: float
var starting_right: float
var starting_top: float
var starting_bottom: float
var starting_font_size: float
var min_font_size: float = 9.0 setget set_min_font_size,get_min_font_size
var font_size_goal: float = 14.0 setget set_font_size_goal,get_font_size_goal

func set_min_font_size(s: float): min_font_size=s
func get_min_font_size(): return min_font_size
func set_font_size_goal(s: float): font_size_goal=s
func get_font_size_goal(): return font_size_goal

func _ready():
	starting_left=margin_left
	starting_right=margin_right
	starting_top=margin_top
	starting_bottom=margin_bottom
	anchor_left=0
	anchor_right=0
	anchor_top=0
	anchor_bottom=0
	
func _process(var _delta: float) -> void:
	var window_size: Vector2 = get_tree().root.size
	var project_height: int = ProjectSettings.get_setting(\"display/window/size/height\")
	var project_width: int = ProjectSettings.get_setting(\"display/window/size/width\")
	var scale: Vector2 = window_size / Vector2(project_width,project_height)
	
	margin_left = floor(starting_left*scale[0])
	margin_right = ceil(starting_right*scale[0])
	margin_top = floor(starting_top*scale[1])
	margin_bottom = ceil(starting_bottom*scale[1])
	
	theme.default_font.size=max(min_font_size,font_size_goal*min(scale[0],scale[1]))
"

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="ServiceSelector" type="GridContainer"]
anchor_left = 0.04
anchor_top = 0.1
anchor_right = 0.23
anchor_bottom = 0.6
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 304.0
margin_bottom = 20.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = SubResource( 2 )
text = "Available Here"
align = 1
valign = 1
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServiceList" type="ItemList" parent="."]
margin_top = 24.0
margin_right = 304.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="deorbit_selected" from="ServiceList" to="." method="deorbit_selected"]
[connection signal="item_selected" from="ServiceList" to="ServiceList" method="_on_item_selected"]
[connection signal="service_activated" from="ServiceList" to="." method="service_activated"]
